--- a/apps/web/src/scss/app.scss
+++ b/apps/web/src/scss/app.scss
@@ -17,13 +17,15 @@
 
     --color-block: #efefef;
     --color-block-light: #f5f5f5;
-    --color-block-dark: #bebebe;
+    --color-block-dark: #9e9e9e;
+    --color-block-darker: #bebebe;
     --color-block-black: #616161;
     --color-block-shadow: rgba(0, 0, 0, 0.4);
 
     --color-gray: #989898;
     --color-green: #1b6e1b;
     --color-green-rgb: 27, 111, 27;
+    --color-green-dark: #093f09;
     --color-green-light: #e1faea;
 
     --color-block-success: #95c394;
