--- a/apps/web/src/scss/app.scss
+++ b/apps/web/src/scss/app.scss
@@ -63,6 +63,7 @@ html {
         --block-border-radius-small: calc(var(--block-border-radius) * 0.75);
         --block-border-radius-tiny: 0.65rem;
         --block-border-width: 0.3rem;
+        --block-border-width-large: 0.43rem;
         --block-border-width-small: 0.18rem;
 
         --block-padding: 1rem;
