Components: Remove the last traces of `styled-components`.
Whoop whoop.

--- a/apps/web/src/components/products/product-actions-container.module.scss
+++ b/apps/web/src/components/products/product-actions-container.module.scss
@@ -20,7 +20,7 @@
         gap: calc(var(--block-spacer-small) / 2) var(--block-spacer-large);
     }
 
-    .productOptions {
+    .product-options {
         display: flex;
         flex-direction: column;
         gap: var(--block-spacer);
