--- a/apps/web/src/app/storefront/(storefront)/[domain]/[locale]/products/[handle]/page.module.scss
+++ b/apps/web/src/app/storefront/(storefront)/[domain]/[locale]/products/[handle]/page.module.scss
@@ -34,7 +34,10 @@
     display: flex;
     flex-direction: column;
     gap: var(--block-spacer-large);
+
     height: 100%;
+
+    font-size: 16px;
 
     @media (min-width: $breakpoint-mobile) {
         gap: var(--block-spacer-huge);
@@ -48,8 +51,8 @@
     background: var(--color-block);
 }
 
-.description {
-    font-size: 1.95rem;
+div.description {
+    font-size: 18px;
 
     padding-top: var(--block-spacer-huge);
     @media (min-width: $breakpoint-mobile) {
@@ -57,7 +60,7 @@
     }
 
     h2 {
-        margin-bottom: var(--block-spacer-large);
+        padding-bottom: var(--block-spacer-large);
         font-size: 2em;
 
         @media (min-width: $breakpoint-mobile) {
