--- a/apps/web/src/components/typography/content.module.scss
+++ b/apps/web/src/components/typography/content.module.scss
@@ -4,7 +4,7 @@
     max-width: 100%;
     height: auto;
     font-weight: 500;
-    font-size: 1.75rem;
+    line-height: normal;
 
     & :is(b, strong) {
         font-weight: 700;
@@ -47,7 +47,7 @@
     p {
         font-size: 1em;
         font-weight: 400;
-        line-height: normal;
+        line-height: 1.3;
 
         &:last-child {
             margin-bottom: 0;
