--- a/apps/web/src/components/layout/tabs.module.scss
+++ b/apps/web/src/components/layout/tabs.module.scss
@@ -3,6 +3,11 @@
 .tabs {
     width: 100%;
     height: 100%;
+    padding: var(--block-padding-large) 0 0 0;
+
+    @media (min-width: $breakpoint-mobile) {
+        padding: 0;
+    }
 
     &:after {
         content: '';
@@ -25,11 +30,15 @@
         color: var(--color-block-dark);
 
         text-transform: capitalize;
-        font-size: 0.9em;
+        font-size: 1em;
         font-weight: 500;
 
         cursor: pointer;
         transition: $animation-duration ease-in-out;
+
+        @media (min-width: $breakpoint-mobile) {
+            font-size: 0.9em;
+        }
     }
 
     input:checked + .label {
@@ -46,7 +55,11 @@
     gap: var(--block-spacer-large);
 
     width: 100%;
-    padding-top: var(--block-spacer-large);
+    padding-top: var(--block-padding);
 
     border-top: var(--block-border-width) solid var(--color-block);
+
+    @media (min-width: $breakpoint-mobile) {
+        padding-top: var(--block-padding-large);
+    }
 }
