Storefront: Implement a bunch of optimizations.
This with the previous commit should (hopefully) finally fix the
regression in the performance of the storefront. If that's the case we
can finally release `v2.0`!

--- a/apps/web/src/components/Header/header-navigation.module.scss
+++ b/apps/web/src/components/Header/header-navigation.module.scss
@@ -114,7 +114,7 @@
                 grid-template-columns: repeat(auto-fill, minmax(16rem, 1fr));
                 gap: var(--block-spacer-large);
                 padding: 2rem 2rem 1rem 2rem;
-                max-width: 1465px;
+                max-width: var(--page-width);
                 margin: 0 auto;
 
                 .subitem {
