--- a/apps/web/src/components/informational/vendors.module.scss
+++ b/apps/web/src/components/informational/vendors.module.scss
@@ -25,5 +25,6 @@
 
     @media (max-width: $breakpoint-mobile) {
         margin-right: var(--block-spacer);
+        padding: var(--block-padding) var(--block-padding-large);
     }
 }
