--- a/apps/web/src/slices/common/Title/title.module.scss
+++ b/apps/web/src/slices/common/Title/title.module.scss
@@ -13,7 +13,7 @@
         line-height: 3.5rem;
 
         &.align-left {
-            align-items: flex-end;
+            align-items: flex-start;
             text-align: left;
         }
         &.align-center {
