--- a/apps/web/src/components/cart/free-shipping-progress.module.scss
+++ b/apps/web/src/components/cart/free-shipping-progress.module.scss
@@ -6,13 +6,17 @@
     justify-content: stretch;
     gap: var(--block-spacer-small);
 
-    padding: var(--block-padding-large);
+    padding: var(--block-padding);
 
     color: var(--accent-secondary-text);
     background-color: var(--color-accent-secondary-light);
 
     transition: 150ms ease-in-out;
     border-radius: var(--block-border-radius);
+
+    @media (min-width: $breakpoint-mobile) {
+        padding: var(--block-padding-large);
+    }
 
     .progress {
         overflow: hidden;
@@ -34,12 +38,12 @@
     .label {
         text-transform: none;
 
-        font-size: 1em;
+        font-size: 0.85em;
         font-weight: 500;
-        line-height: 1.15;
+        line-height: normal;
 
         @media (min-width: $breakpoint-mobile) {
-            font-size: 1.15em;
+            font-size: 1em;
         }
     }
 
@@ -47,13 +51,14 @@
         padding: var(--block-padding-large);
 
         background-color: var(--color-green-light);
-        border: var(--block-border-width-large) solid var(--color-green);
 
         border-radius: var(--block-border-radius);
 
         &,
         .label {
             color: var(--color-green);
+
+            font-weight: 600;
         }
     }
 }
