--- a/apps/web/src/components/products/product-gallery.module.scss
+++ b/apps/web/src/components/products/product-gallery.module.scss
@@ -6,6 +6,9 @@
 
     margin-bottom: var(--block-padding-large);
 
+    -webkit-user-select: none;
+    user-select: none;
+
     @media (min-width: $breakpoint-mobile) {
         flex-direction: column;
         gap: var(--block-spacer-large);
