ProductPage: Add `<RecommendedProducts/>` component.

--- a/apps/web/src/components/typography/pricing.module.scss
+++ b/apps/web/src/components/typography/pricing.module.scss
@@ -14,6 +14,9 @@
     font-weight: 600;
 
     &.sale {
+        font-weight: 800;
+        font-size: 1.35em;
+
         color: var(--color-sale);
     }
 }
