--- a/apps/web/src/components/products/product-gallery.module.scss
+++ b/apps/web/src/components/products/product-gallery.module.scss
@@ -26,6 +26,8 @@
         justify-content: center;
         align-items: center;
 
+        max-height: 80vh;
+
         @media (min-width: $breakpoint-mobile) {
             justify-content: flex-start;
             align-items: flex-start;
@@ -33,6 +35,8 @@
 
         img {
             width: 100%;
+
+            object-fit: contain;
 
             @media (min-width: $breakpoint-mobile) {
                 height: 100%;
