Cart: Improve layout.

--- a/apps/web/src/components/cart/cart-summary.module.scss
+++ b/apps/web/src/components/cart/cart-summary.module.scss
@@ -49,6 +49,7 @@
         height: var(--button-height);
     }
     .shop-button {
+        --button-height: 4.5rem;
         --shop-pay-button-height: var(--button-height);
 
         overflow: hidden;
